Kickstart 7.0.3
================================================================================
+ You can now try to resume the extraction on error
# [LOW] PHP 8: error shown at the end of the extraction due to missing finalization of the unarchiver

Kickstart 7.0.2
================================================================================
~ Update URLs to point to akeeba.com instead of akeebabackup.com
~ The PHP version warning can now handle "too new" versions
# [HIGH] Inheriting AddHandler/SetHandler fails when the line has leading whitespace (gh-20)

Kickstart 7.0.1
================================================================================
+ Informative error message when your PHP version is too old for this version of Kickstart
+ Print a warning when your PHP version is End of Life
~ Changed the documentation URLs following documentation refactoring on our site.

Kickstart 7.0.0
================================================================================
+ Dark Mode

Kickstart 6.0.2
================================================================================
~ PHP 7.4 support
# [LOW] Fixed selecting the correct file while importing from Amazon S3

Kickstart 6.0.1
================================================================================
# [HIGH] Error extracting archives under PHP 7.3

Kickstart 6.0.0
================================================================================
- Removing all external Javascript dependencies (e.g. jQuery)

Kickstart 5.5.1
================================================================================
# [HIGH] Untranslated strings shown when running Kickstart
# [LOW] Fixed references to possibly undefined KSSELFNAME

Kickstart 5.5.0
================================================================================
+ Option to delete all files / folders before extraction. DANGEROUS. For advanced users only. Available only in the Pro version.