@@ -215,7 +215,7 @@
 
       <itemizedlist>
         <listitem>
-          <para>PHP 5.6.0 or later. We recommend using PHP 7.3.</para>
+          <para>PHP 5.6.0 or later. We recommend using PHP 7.4.</para>
         </listitem>
 
         <listitem>
